...
    <string name="ui_4544c7e538">输入作者 ID，以逗号或换行分隔</string>
    <string name="ui_4a58070031">纵向阅读</string>
    <string name="ui_4a5a8a9f75">打开作品后，会自动记住你走过的地方</string>
    <string name="ui_4b65d10385">— 正文结束 —</string>
    <string name="ui_4d0b4688c7">取消</string>
    <string name="ui_5196834bd3">最早发布</string>
    <string name="ui_523e40a074">发现</string>
    <string name="ui_590a4df471">暂时无法加载作品</string>
    <string name="ui_592bb1ace9">导入登录凭据</string>
    <string name="ui_5b34213640">在阅读器中突出画作</string>
    <string name="ui_5c3b597ab6">无法加载正文</string>
    <string name="ui_5c8d1c78fd">输入你自己的 refresh token。凭据仅加密保存在本机。</string>
    <string name="ui_5d3fbdf11e">网络与下载</string>
...
    <string name="ui_999365fe74">连接方式</string>
    <string name="ui_9cc2ab8295">仍受 Pixiv 账号权限限制</string>
    <string name="ui_9d180a2c78">动态取色</string>
    <string name="ui_9d4ca7f307">账号管理</string>
    <string name="ui_a0217cd1e4">查看原图</string>
    <string name="ui_a588489241">试试其他分类，或调整内容过滤设置</string>
    <string name="ui_a82c993d73">我的</string>
    <string name="ui_b0911e6444">小说插图</string>
    <string name="ui_b57634d889">女性热门</string>
    <string name="ui_b6f4afaf6d">最近搜索</string>
    <string name="ui_b6fe094725">仅自己可见，也可以在私人收藏中找到这件作品。</string>
    <string name="ui_b7f564e542">隐藏 AI 作品</string>
    <string name="ui_b9786d51c3">搜索失败</string>
...
